2006-05-30 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (isLoopCountable): fixed bug #1478316
	(processParms): fixed bug #1247551

2006-05-27 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCcse.c (findPointerSet): fixed bug #1493710
	* support/regression/tests/bug-1493710.c: added

2006-05-27 Borut Razem <borut.razem AT siol.net>

	* support/regression/fwk/lib/testfwk.c: define array in _printn() as
	  static instead auto
	* support/regression/ports/pic16/support.c: increase stack size
	  from default 64 bytes to 128 bytes
	* support/regression/tests/staticinit.c,
	  support/regression/tests/float.c: regression tests fully enabled
	  for pic16 port by putting the initialized data arrays into the code
	  section
	* support/regression/ports/pic16/spec.mk: don't link default libraries.
	  This was changed by mistake in the previous version.

2006-05-28 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/pic16/gen.c (genFunction, genEndFunction): some
	beautifications, fixed bug with falsely restoring FSR2 in large
	stack model, thanks to Beau E. Cox for reporting the bug

2006-05-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/break.c,
	* debugger/mcs51/cmd.c (throughout): removed unused variables and labels,
	  use %p to print pointers, made address variables unsigned
	* debugger/mcs51/cmd.c (infoSymbols): added missing parameter to printf
	* debugger/mcs51/symtab.c (parseSymbol): must return something
	* src/mcs51/gen.c (aopForSym): small optimization,
	   moved declarations mcs51_ptrRegReq and mcs51_nRegs to ralloc.h,
	  (freeAsmop): added missing break,
	  (aopPut): removed parameter bvolatile, determine it inside the function,
	  (saveRegisters, unsaveRegisters): small optimization,
	  (genIpush): removed pointless check,
	  (throughout): replaced Safe_calloc, strcpy with Safe_strdup,
	  replaced sprintf with SNPRINTF,
	  replaced strcpy with strncpyz,
	  updated aopPut calls,